--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,17 +22,17 @@
                 <form action="">
                     <table  border="1" >
                         <tr class="thead">
-                            <th style="background-color:rgb(255, 0, 255)"class="col-name">Name</th>
-                            <th style="background-color:rgb(255, 0, 255)" class="col-id"> Price</th>
-                            <th style="background-color:rgb(255, 0, 255)" class="col-color">Color</th>
+                            <th style="background-color:rgb(8, 253, 29)"class="col-name">Name</th>
+                            <th style="background-color:rgb(0, 204, 255)" class="col-id"> Price</th>
+                            <th style="background-color:rgb(4, 0, 255)" class="col-color">Color</th>
                             <th style="background-color:rgb(255, 0, 255)" class="col-act">Action</th>
                         </tr> 
                         {{#each products}}
                         <tr>
-                            <td>{{name}}</td>
-                            <td>{{price}}</td>
-                            <td>{{color}}</td>
-                            <td>
+                            <td style="color:rgb(255, 255, 255);background-color:rgb(8, 253, 29)">{{name}}</td>
+                            <td style="color:rgb(255, 255, 255);background-color:rgb(0, 204, 255)">{{price}}</td>
+                            <td style="color:rgb(255, 255, 255);background-color:rgb(4, 0, 255)">{{color}}</td>
+                            <td style="color:rgb(255, 255, 255);background-color:rgb(255, 0, 255)">
                                 <span class="icon"><a href="/update?id={{_id}}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
                                 <a href="/delete?id={{_id}}"><i class="fa fa-trash" aria-hidden="true"></i></a></span>
                             </td>
