--- a/public/product.css
+++ b/public/product.css
@@ -31,7 +31,7 @@ body{
 }
 
 .col-id{
-    width: 10%;
+    width: 20%;
     text-align: center;
     border-right: 1px solid white;
 }
@@ -43,8 +43,8 @@ body{
 .col-act{
     width: 10%;
 }
-.col-detail{
-    width: 50%;
+.col-color{
+    width: 10%;
     
 }
 table{
@@ -66,8 +66,7 @@ table th{
     justify-content: space-evenly;
 }
 .create{
-   display: flex;
-    justify-content: flex-end;
+  
     margin-bottom: 6px;
 
 }
@@ -78,7 +77,7 @@ table th{
     background-color: rgb(36, 72, 231);
     text-decoration: none;
     border-radius: 5px;
-    display: block;
+   
     /* line-height: 30px; */
     
 }
