--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,13 +6,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="product.css">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSZwl5F54b4LtwMdyh0XuzOkOy80dPmaBXJSQ6b5gkPf0w2Ip3a&usqp=CAU" type="image/x-icon">
+    <link rel="shortcut icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftrainghiemso.vn%2Fcach-che-icon-cam-xuc-thuong-thuong-cua-facebook-om-hinh-anh-cua-ban%2F&psig=AOvVaw2In2uU6t4byBU_ZGfoHpP-&ust=1592837389564000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCJCg7-mTk-oCFQAAAAAdAAAAABAD" type="image/x-icon">
 </head>
 <body>
         <div class="container">
             
             <div class="title">
-                <h1 style="background-color:blueviolet">Shoes store</h1>
+                <h1 style="background-color:blueviolet; ">Shoes store</h1>
             </div>
             
             <div class="list">
