--- a/views/index.hbs
+++ b/views/index.hbs
@@ -29,9 +29,9 @@
                         </tr> 
                         {{#each products}}
                         <tr>
-                            <td style="color:rgb(255, 255, 255);background-color:rgb(8, 253, 29)">{{name}}</td>
-                            <td style="color:rgb(255, 255, 255);background-color:rgb(0, 204, 255)">{{price}}</td>
-                            <td style="color:rgb(255, 255, 255);background-color:rgb(4, 0, 255)">{{color}}</td>
+                            <td style="color:rgb(255, 255, 255);background-color:rgb(8, 253, 29);text-align:center">{{name}}</td>
+                            <td style="color:rgb(255, 255, 255);background-color:rgb(0, 204, 255);text-align:center">{{price}}</td>
+                            <td style="color:rgb(255, 255, 255);background-color:rgb(4, 0, 255);text-align:center">{{color}}</td>
                             <td style="color:rgb(255, 255, 255);background-color:rgb(255, 0, 255)">
                                 <span class="icon"><a href="/update?id={{_id}}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
                                 <a href="/delete?id={{_id}}"><i class="fa fa-trash" aria-hidden="true"></i></a></span>
