--- a/views/index.hbs
+++ b/views/index.hbs
@@ -29,7 +29,7 @@
                         </tr> 
                         {{#each products}}
                         <tr>
-                            <td style="color:rgb(255, 255, 255);background-color:rgb(8, 253, 29);text-align:center">{{name}}</td>
+                            <td style="color:rgb(255, 255, 255);background-color:rgb(8, 253, 29)">{{name}}</td>
                             <td style="color:rgb(255, 255, 255);background-color:rgb(0, 204, 255);text-align:center">{{price}}</td>
                             <td style="color:rgb(255, 255, 255);background-color:rgb(4, 0, 255);text-align:center">{{color}}</td>
                             <td style="color:rgb(255, 255, 255);background-color:rgb(255, 0, 255)">
