--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,7 +12,7 @@
         <div class="container">
             
             <div class="title">
-                <h1 style="background-color:blueviolet;text-align:center">Stoy store</h1>
+                <h1 style="background-color:blueviolet;text-align:center">Toy store</h1>
             </div>
             
             <div class="list">
