--- a/views/insertProduct.hbs
+++ b/views/insertProduct.hbs
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Toy store</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" href="https://i.pinimg.com/originals/bf/e7/b2/bfe7b2008671ba5e95578d7fe33fc8a9.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fngoisao.net%2Fgia-dinh%2Fbe-gai-meu-mao-chup-anh-voi-cuc-hoa-mi-4008697.html&psig=AOvVaw39KMiRtHfvZ0YYoaoCRNKw&ust=1592875606890000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCKiX5JuilOoCFQAAAAAdAAAAABAD" type="image/x-icon">
 </head>
 
 <body>
