--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Toy store</title>
     <link rel="stylesheet" href="product.css">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftrainghiemso.vn%2Fcach-che-icon-cam-xuc-thuong-thuong-cua-facebook-om-hinh-anh-cua-ban%2F&psig=AOvVaw2In2uU6t4byBU_ZGfoHpP-&ust=1592837389564000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCJCg7-mTk-oCFQAAAAAdAAAAABAD" type="image/x-icon">
+    <link rel="shortcut icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fngoisao.net%2Fgia-dinh%2Fbe-gai-meu-mao-chup-anh-voi-cuc-hoa-mi-4008697.html&psig=AOvVaw39KMiRtHfvZ0YYoaoCRNKw&ust=1592875606890000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCKiX5JuilOoCFQAAAAAdAAAAABAD" type="image/x-icon">
 </head>
 <body>
         <div class="container">
