--- a/views/updateProduct.hbs
+++ b/views/updateProduct.hbs
@@ -12,7 +12,7 @@
 <body>
 
     <div class="container">
-        <h1 class="title">Update Product</h1>
+        <h1 class="title"><u><i>Update Product</i></u> </h1>
         <div class="box-input">
             <form action="doUpdate" method="POST">
                 <input type="hidden" class="text" name="id" value="{{products._id}}">
