--- a/views/insertProduct.hbs
+++ b/views/insertProduct.hbs
@@ -12,12 +12,13 @@
 <body>
 
     <div class="container">
-        <h1 class="title">Insert Product</h1>
+        <h1 class="title"><i><u> Insert Product</u></i></h1>
         <div class="box-input">
             <form action="doInsert" method="POST">
                 <input class="text" type="text" name="txtName" placeholder="Name">
                 <input class="text" type="text" name="txtPrice" placeholder="Price">
                 <input class="text" type="text" name="txtColor" placeholder="Color">
+                 <input class="text" type="text" name="txtColor" placeholder="Detail">
                 <input class="submit" type="submit" value="Insert product">
             </form>
         </div>
